--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "test": "hardhat test --network hardhat",
     "compile": "hardhat compile",
     "deploy": "hardhat run scripts/deploy.js",
-    "postdeploy": "hardhat run scripts/publish.js"
+    "postdeploy": "hardhat run scripts/publish.js",
+    "interact": "hardhat run scripts/interact.js"
   }
 }
