--- a/package.json
+++ b/package.json
@@ -3,20 +3,21 @@
   "dependencies": {
     "@nomiclabs/hardhat-web3": "^2.0.0",
     "@openzeppelin/contracts": "^4.2.0",
+    "babel-polyfill": "^6.26.0",
+    "babel-register": "^6.26.0",
     "dotenv": "^10.0.0",
     "hardhat": "^2.5.0",
-    "web3": "^1.4.0",
-    "babel-polyfill": "^6.26.0",
-    "babel-register": "^6.26.0"
+    "path": "^0.12.7",
+    "web3": "^1.4.0"
   },
   "devDependencies": {
+    "@graphprotocol/graph-cli": "^0.21.1",
+    "@graphprotocol/graph-ts": "^0.20.0",
     "@nomiclabs/hardhat-ethers": "^2.0.0",
     "@nomiclabs/hardhat-waffle": "^2.0.0",
     "chai": "^4.2.0",
     "ethereum-waffle": "^3.0.0",
-    "ethers": "^5.0.0",
-    "@graphprotocol/graph-cli": "^0.21.1",
-    "@graphprotocol/graph-ts": "^0.20.0"
+    "ethers": "^5.0.0"
   },
   "scripts": {
     "test": "hardhat test --network hardhat",
