--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "license": "MIT",
   "dependencies": {
+    "@nomiclabs/hardhat-etherscan": "^2.1.4",
     "@nomiclabs/hardhat-web3": "^2.0.0",
     "@openzeppelin/contracts": "^4.2.0",
     "babel-polyfill": "^6.26.0",
@@ -21,6 +22,7 @@
   },
   "scripts": {
     "test": "hardhat test --network hardhat",
+    "verify": "hardhat verify",
     "compile": "hardhat compile",
     "deploy": "hardhat run scripts/deploy.js",
     "postdeploy": "hardhat run scripts/publish.js",
